--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container nav_container">
           <a href="#" class="nav_logo"><i class="fa-solid fa-basket-shopping"></i>  EXCLUSIVE</a>
           <ul class="nav_list">
-            <li class="nav_item"><a href="/index..html" class="nav_link">Home</a></li>
+            <li class="nav_item"><a href="/index.html" class="nav_link">Home</a></li>
             <li class="nav_item"><a href="/about.html" class="nav_link">About</a></li>
             <li class="nav_item"><a href="/contect.html" class="nav_link">Contact</a></li>
             <li class="nav_item">
